--- a/index.html
+++ b/index.html
@@ -38,6 +38,11 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 var docMod = document.lastModified; // loads last modified time stamp into docMod variable
 alert("This file last modified " + docMod); // generates alert box with time stamp. If annoying, comment out this entire line.
 console.log("This file last modified " + docMod); // generates message in javaScript console (found in developers tools) with time stamp. 
+
+// <canvas width="300" height="225"></canvas>	
+//<canvas id="a" width="300" height="225"></canvas>
+//var a_canvas = document.getElementById("a");
+
 </script>
 
 
@@ -68,6 +73,9 @@ console.log("This file last modified " + docMod); // generates message in javaSc
 </div>
 	
 <div id="content" class="w3-container">
+	
+	<canvas width="300" height="225"></canvas> <!--trying to input canvas onto page w this code-->
+	
 	<p>Content goes here.</p>
 		
 	<p>The following code has been developed by students and/or researchers of the Freshman Research Initiative DIY Diagnostics Stream at The University of Texas at 		Austin.  This code is shared for demonstration purposes and should not be considered a product -- it is for entertainment purposes only. Any user of this code 			does so at their own risk. Members of the DIY Stream, FRI, and The University of Texas system are not liable for anything related to this code.</p>
