added border to canvas

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ console.log("This file last modified " + docMod); // generates message in javaSc
 	
 <div id="content" class="w3-container">
 	
-	<canvas width="300" height="225"></canvas> <!--trying to input canvas onto page w this code-->
+	<canvas width="300" height="225" style="border: 1px solid black;"></canvas> <!--trying to input canvas onto page w this code and border-->
 	
 	<p>Content goes here.</p>
 		
