--- a/index.html
+++ b/index.html
@@ -75,8 +75,7 @@ var a_canvas = document.getElementById("a");
 	
 <div id="content" class="w3-container">
 	
-	<!--<canvas id="a" width="300" height="225" style="border: 1px solid black;"></canvas> <!--trying to input canvas onto page w this code and border-->
-	<span id="a"></span>
+	<canvas id="a" width="300" height="225" style="border: 1px solid black;"></canvas> <!--trying to input canvas onto page w this code and border -->
 	
 		
 	<p>The following code has been developed by students and/or researchers of the Freshman Research Initiative DIY Diagnostics Stream at The University of Texas at 		Austin.  This code is shared for demonstration purposes and should not be considered a product -- it is for entertainment purposes only. Any user of this code 			does so at their own risk. Members of the DIY Stream, FRI, and The University of Texas system are not liable for anything related to this code.</p>
