--- a/index.html
+++ b/index.html
@@ -44,6 +44,13 @@ console.log("This file last modified " + docMod); // generates message in javaSc
 var a_canvas = document.getElementById("a"); 
 // code for canvas
 
+//function belowe to draw rectangle in canvas
+function draw_b() {
+  var b_canvas = document.getElementById("b");
+  var b_context = b_canvas.getContext("2d");
+  b_context.fillRect(50, 25, 150, 100);
+}
+	
 </script>
 
 
@@ -76,7 +83,7 @@ var a_canvas = document.getElementById("a");
 <div id="content" class="w3-container">
 	
 	<canvas id="a" width="300" height="225" style="border: 1px solid black;"></canvas> <!--trying to input canvas onto page w this code and border -->
-	
+	<a class="w3-btn w3-red" onclick="2d();"> Draw Rectangle </a> <!--code for rectangle onclick button-->
 		
 	<p>The following code has been developed by students and/or researchers of the Freshman Research Initiative DIY Diagnostics Stream at The University of Texas at 		Austin.  This code is shared for demonstration purposes and should not be considered a product -- it is for entertainment purposes only. Any user of this code 			does so at their own risk. Members of the DIY Stream, FRI, and The University of Texas system are not liable for anything related to this code.</p>
  	
