--- a/index.html
+++ b/index.html
@@ -81,7 +81,8 @@ console.log("This file last modified " + docMod); // generates message in javaSc
 }
 </style>
 
-<body>
+<body onload="draw();">
+   	<canvas id="canvas" width="150" height="150"></canvas> <!-- this function onlaods the triangle-->
 <div id="header" class="w3-container w3-flat-carrot">
 	<h1>App6---HTML5-Canvas</h1>
 </div>
@@ -91,8 +92,7 @@ console.log("This file last modified " + docMod); // generates message in javaSc
 	<!--<canvas id="myCanvas" width="300" height="225" style="border: 1px solid black;"></canvas> <!--trying to input canvas onto page w this code and border -->
 	
 	<!--<a class="w3-btn w3-red" onclick="2d();"> Draw Rectangle </a> <!--code for rectangle onclick button-->
-	onload="draw();">
-   	<canvas id="canvas" width="150" height="150"></canvas> <!-- this function onlaods the triangle--> 
+	
 		
 	<p>The following code has been developed by students and/or researchers of the Freshman Research Initiative DIY Diagnostics Stream at The University of Texas at 		Austin.  This code is shared for demonstration purposes and should not be considered a product -- it is for entertainment purposes only. Any user of this code 			does so at their own risk. Members of the DIY Stream, FRI, and The University of Texas system are not liable for anything related to this code.</p>
  	
