--- a/index.html
+++ b/index.html
@@ -39,20 +39,6 @@ var docMod = document.lastModified; // loads last modified time stamp into docMo
 alert("This file last modified " + docMod); // generates alert box with time stamp. If annoying, comment out this entire line.
 console.log("This file last modified " + docMod); // generates message in javaScript console (found in developers tools) with time stamp. 
 
-
-//var c = document.getElementById("myCanvas");
-//var ctx = c.getContext("2d");
-//ctx.beginPath();
-//ctx.arc(95, 50, 40, 0, 2 * Math.PI);
-//ctx.stroke();
-
-// code for a line with in the canvas
-var c = document.getElementById("myCanvas");
-var ctx = c.getContext("2d");
-ctx.moveTo(0, 0);
-ctx.lineTo(200, 100);
-ctx.stroke();
-
 	
 </script>
 
@@ -85,11 +71,8 @@ ctx.stroke();
 	
 <div id="content" class="w3-container">
 	
-	<!--<canvas id="myCanvas" width="300" height="225" style="border: 1px solid black;"></canvas> <!--trying to input canvas onto page w this code and border -->
-	
-	<!--<a class="w3-btn w3-red" onclick="2d();"> Draw Rectangle </a> <!--code for rectangle onclick button-->
-	
-	<canvas id="myCanvas" width="200" height="100" style="border:1px solid #d3d3d3;"> <!--w3 css method-->
+
+	<canvas id="myCanvas" width="300" height="225" style="border:1px solid black;"></canvas> <!--w3 css method-->
 		
 	<p>The following code has been developed by students and/or researchers of the Freshman Research Initiative DIY Diagnostics Stream at The University of Texas at 		Austin.  This code is shared for demonstration purposes and should not be considered a product -- it is for entertainment purposes only. Any user of this code 			does so at their own risk. Members of the DIY Stream, FRI, and The University of Texas system are not liable for anything related to this code.</p>
  	
