--- a/index.html
+++ b/index.html
@@ -73,7 +73,15 @@ console.log("This file last modified " + docMod); // generates message in javaSc
 	
 
 	<canvas id="myCanvas" width="300" height="225" style="border:1px solid black;"></canvas> <!--w3 css method-->
-		
+	
+	<script>
+		var c = document.getElementById("myCanvas");
+		var ctx = c.getContext("2d");
+		ctx.beginPath();
+		ctx.rect(20, 20, 150, 100);
+		ctx.stroke();
+	</script> 
+<!--i put the code for the rectangle with in the body-->
 	<p>The following code has been developed by students and/or researchers of the Freshman Research Initiative DIY Diagnostics Stream at The University of Texas at 		Austin.  This code is shared for demonstration purposes and should not be considered a product -- it is for entertainment purposes only. Any user of this code 			does so at their own risk. Members of the DIY Stream, FRI, and The University of Texas system are not liable for anything related to this code.</p>
  	
 	<p>THIS CODE SHOULD NOT BE USED TO DIAGNOSE ANY KIND OF MEDICAL CONDITION.</p>
