--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ console.log("This file last modified " + docMod); // generates message in javaSc
 		ctx.rect(20, 20, 150, 100);
 		ctx.stroke();
 		}
-	//code to clear canvas
+	//code to clear canvas, this just overides the first step and now the rectangle doesnt show up
 	function clearCanvas() {
 		context.clearRect(0, 0, canvas.width, canvas.height);
 	</script>
