--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ console.log("This file last modified " + docMod); // generates message in javaSc
 		ctx.stroke();
 		}
 	
-//code to clear canvas, this just overides the first step and now the rectangle doesnt show up
+//code to clear canvas, is not working
 	function clearCanvas() {
 		context.clearRect(0, 0, canvas.width, canvas.height);
 		}
