--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ console.log("This file last modified " + docMod); // generates message in javaSc
 	
 //code to clear canvas, is not working
 	function clearCanvas() {
-		context.clearRect(0, 0, canvas.width, canvas.height);
+		context.clearRect(0, 0, myCanvas.width, myCanvas.height);
 		}
 	
 </script>
