--- a/index.html
+++ b/index.html
@@ -50,9 +50,10 @@ console.log("This file last modified " + docMod); // generates message in javaSc
 	
 //code to clear canvas, is not working
 	function clearCanvas() {
-		context.clearRect(0, 0, myCanvas.width, myCanvas.height);
-		}
-	
+		//context.clearRect(0, 0, myCanvas.width, myCanvas.height);
+		var c_canvas = document.getElementById("myCanvas");
+		c_canvas.width = c_canvas.width;
+	}
 </script>
 
 
