--- a/index.html
+++ b/index.html
@@ -54,6 +54,12 @@ console.log("This file last modified " + docMod); // generates message in javaSc
 		var c_canvas = document.getElementById("myCanvas");
 		c_canvas.width = c_canvas.width;
 	}
+//code to print name into canvas
+	function printName() {
+		var c = document.getElementById("myCanvas");
+		var ctx = c.getContext("2d");
+		ctx.font = "30px Arial";
+		ctx.fillText("AIYA",10,50);
 </script>
 
 
