--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@ console.log("This file last modified " + docMod); // generates message in javaSc
 	<canvas id="myCanvas" width="300" height="225" style="border:1px solid black;"></canvas> 
 	<br> <button onclick="drawRectangle()">Draw Rectangle</button>
 	<br> <button onclick="clearCanvas()">Clear Canvas</button>
+	<br> <button onclick="printName()">Print Name</button>
 	
 	
 	
